--- a/src/main/java/esbam/canoa123/views/TelaPrincipal.form
+++ b/src/main/java/esbam/canoa123/views/TelaPrincipal.form
@@ -62,6 +62,9 @@
               <Color blue="ca" green="ca" red="13" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Marcado"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="DokChampa" size="14" style="1"/>
             </Property>
@@ -73,6 +76,9 @@
               <Color blue="ca" green="ca" red="13" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Viagem futura"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="DokChampa" size="14" style="1"/>
             </Property>
@@ -105,13 +111,25 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="404" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lblImgBanco" min="-2" pref="55" max="-2" attributes="0"/>
+              <EmptySpace pref="343" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="278" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="217" max="32767" attributes="0"/>
+              <Component id="lblImgBanco" min="-2" pref="55" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JLabel" name="lblImgBanco">
+    </Component>
+  </SubComponents>
 </Form>
